k8s/apps/netbox/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  tls:
    - secretName: tls-netbox.lly.sh
      hosts:
        - netbox.lly.sh
  rules:
    - host: netbox.lly.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netbox
                port:
                  name: http
